vpcHost.yml
AWSTemplateFormatVersion: 2010-09-09
Description: ec2 dedicated host

Resources:
  kkVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: false
      InstanceTenancy: default
  kkGateway:
    Type: AWS::EC2::InternetGateway
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref kkGateway
      VpcId: !Ref kkVPC
  kkSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: koreytestgroup
      GroupDescription: testing
      VpcId: !Ref kkVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  kksubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      VpcId: !Ref kkVPC
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref kkVPC
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref kkGateway
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref kksubnet
  kkHost:
    Type: AWS::EC2::Host
    Properties:
      AvailabilityZone: us-east-1a
      InstanceType: a1.medium
Outputs:
  ec2HostArn:
    Description: dummy host
    Value: !Ref kkHost
    Export:
      Name: kkHost
  vpc:
    Description: vpc
    Value: !Ref kkVPC
    Export:
      Name: kkVPC
  group:
    Description: group
    Value: !Ref kkSecurityGroup
    Export:
      Name: kkSecurityGroup
  subnet:
    Description: subnet
    Value: !Ref kksubnet
    Export:
      Name: kkSubnet
